--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="content">
                 <i class="logo"></i>
                 <h2 class="character-name">Barba Branca</h2>
-                <p class="descricao">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, est! Placeat saepe facere dicta aliquid quaerat expedita? Enim facilis possimus ipsum necessitatibus, inventore blanditiis similique exercitationem molestiae doloribus pariatur nobis.</p>
+                <p class="descricao">Edward Newgate,mais conhecido como "Barba Branca", foi o capitão dos Piratas do Barba Branca e aquele que ficou conhecido como "O Homem Mais Forte do Mundo" e "O Homem Mais Próximo do One Piece" após a morte de Gol D. Roger.</p>
             </div>
         </div>
 
